@startuml

class Perso {
    x : int
    y : int

    + Perso (dx : int, dy : int)
    + etrePresent (dx : int, dy : int) : boolean
    + getX()
    + getY()
}

class Labyrinthe {
    + MUR : char {static}
    + PJ : char {static}
    + VIDE : char {static}
    + HAUT : String {static}
    + BAS : String {static}
    + GAUCHE : String {static}
    + DROITE : String {static}
    + murs : boolean

    + Labyrinthe (nom : String)
    + getSuivant (x : int, y : int, action : String) : int []
    + deplacerPerso (action : String)
    + etreFini () : boolean
    + getLengthY () : int
    + getLengthX () : int
    + getMur (x : int, y : int) : boolean
}

class LabyJeu {
    + LabyJeu(labyP : Labyrinthe)
    + update(secondes : double, clavier : Clavier)
    + init()
    + etreFini() : boolean
    + getLaby() : Labyrinthe
}

class LabyDessin {
    - TAILLE_CASE : int {static}
    + dessinerJeu (jeu : Jeu, canvas : Canvas)
}

Labyrinthe --> Perso : pj "1"
Labyrinthe "1" <-- LabyJeu : laby

@enduml